refactor: address feedback and switch to using list.of